--- a/src/MyApp/UserBundle/Resources/views/BestDeal/rechercheliste.html.twig
+++ b/src/MyApp/UserBundle/Resources/views/BestDeal/rechercheliste.html.twig
@@ -1,4 +1,4 @@
-{%extends "MyAppUserBundle::layout.html.twig"%}
+{%extends "UserBundle::layout.html.twig"%}
 {% block container %}
     <div class="container">
 
