mise a jour par khalil admin

--- a/src/Admin/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Admin/AdminBundle/Resources/views/layout.html.twig
@@ -54,7 +54,7 @@
                                 <!-- /input-group -->
                             </li>
                             <li>
-                                <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Home</a>
+                                <a href="index"><i class="fa fa-dashboard fa-fw"></i> Home</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Statistiques<span class="fa arrow"></span></a>
@@ -69,14 +69,14 @@
                                 <!-- /.nav-second-level -->
                             </li>
                             <li>
-                                <a href="clients.html"><i class="fa fa-table fa-fw"></i> Liste Clients</a>
+                                <a href="client"><i class="fa fa-table fa-fw"></i> Liste Clients</a>
                             </li>
 
                             <li>
                                 <a href="#"><i class="fa fa-table fa-fw"></i> Prestataires<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="prestataires.html"> Liste Prestataires</a>
+                                        <a href="prestataire"> Liste Prestataires</a>
                                     </li>
                                     <li>
                                         <a href="validationprestataires.html"> Validation Prestataires</a>
@@ -88,7 +88,7 @@
                                 <a href="#"><i class="fa fa-table fa-fw"></i> Deals<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="deals.html"> Liste Deals</a>
+                                        <a href="deal"> Liste Deals</a>
                                     </li>
                                     <li>
                                         <a href="validationdeals.html"> Valider Deal</a>
