--- a/src/Admin/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Admin/AdminBundle/Resources/views/layout.html.twig
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Start Bootstrap - SB Admin Version 2.0 Demo</title>
+        <title>Admin</title>
 
         <!-- Core CSS - Include with every page -->
         <link href="{{asset('css/admin/bootstrap.css')}}" rel="stylesheet">
@@ -91,7 +91,7 @@
                                         <a href="deal"> Liste Deals</a>
                                     </li>
                                     <li>
-                                        <a href="validationdeals.html"> Valider Deal</a>
+                                        <a href="deal_a_Valider"> Valider Deal</a>
                                     </li>
                                     <!-- <li>
                                         <a href="#">Third Level <span class="fa arrow"></span></a>
