mise a jour par khalil admin validation et suppression 2

--- a/src/Admin/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Admin/AdminBundle/Resources/views/layout.html.twig
@@ -79,7 +79,7 @@
                                         <a href="prestataire"> Liste Prestataires</a>
                                     </li>
                                     <li>
-                                        <a href="validationprestataires.html"> Validation Prestataires</a>
+                                        <a href="prest_a_Valider"> Validation Prestataires</a>
                                     </li>                                                               
                                 </ul>
                                 <!-- /.nav-second-level -->
