--- a/src/Admin/AdminBundle/Resources/views/Default/client.html.twig
+++ b/src/Admin/AdminBundle/Resources/views/Default/client.html.twig
@@ -3,12 +3,24 @@
 
     <div id="pagewrapper">
             <div class="row">
+                
                 <div class="col-lg-12">
                     <h1 class="page-header">Liste Clients</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
+            <div class="col-lg-9">
+			</div>
+			<div class="col-lg-3">
+			<div class="form-group input-group" >
+                                            <input type="text" class="form-control" placeholder="Search...">
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-default" type="button"><i class="fa fa-search"></i>
+                                                </button>
+                                            </span>
+                                        </div>
+			</div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
