Projet bestdealweb Idani ABdesselem

--- a/src/MyApp/UserBundle/Resources/views/BestDeal/notification.html.twig
+++ b/src/MyApp/UserBundle/Resources/views/BestDeal/notification.html.twig
@@ -23,7 +23,7 @@
                 <div class="col-md-4">
                     <p>Objet: <strong>{{notif.TypeNotification}}</strong>
                     </p>
-                    <p>De: <strong>{{notif.IdNotification}}</strong>
+                    <p>De: <strong>{{user.username}}</strong>
                     </p>
                     <p>Date de reception: <strong>{{notif.datenotification}}</strong>
                     </p>
