--- a/src/MyApp/UserBundle/Resources/views/Registration/register_contentPres.html.twig
+++ b/src/MyApp/UserBundle/Resources/views/Registration/register_contentPres.html.twig
@@ -1,5 +1,6 @@
 {% trans_default_domain 'FOSUserBundle' %}
-
+<link href="{{asset('css/inscrit.css')}}" rel="stylesheet">
+            <div class="box">
 <form action="{{ path('fos_user_registration_registerPres') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
     {{ form_errors(form.email) }}
         {{ form_errors(form.plainPassword) }}
@@ -10,10 +11,14 @@
         {{form_label(form.username)}}
         {{ form_widget(form.username) }}
         <br />
-        {{form_label(form.plainPassword)}}
+        
+
+        {{form_label(form.plainPassword.first)}}
         {{ form_widget(form.plainPassword.first) }}
-        {{ form_widget(form.plainPassword.second) }}
             <br />
+            {{form_label(form.plainPassword.second)}}
+        {{ form_widget(form.plainPassword.second) }}
+                    <br />
         {{form_label(form.societe)}}
         {{ form_widget(form.societe) }}
           <br />
@@ -29,11 +34,10 @@
         <br />
         {{form_label(form.telephone)}}
         {{ form_widget(form.telephone) }}
-       
+      
          <br />
         {{ form_widget(form.nom, { 'attr' : { 'style':'display:none'} }) }}
         {{ form_widget(form.prenom, { 'attr' : { 'style':'display:none'} }) }}
-        {{ form_widget(form.sexe, { 'attr' : { 'style':'display:none'} }) }}
 
         <br />
                {{ form_rest(form) }} 
@@ -41,3 +45,4 @@
         <input type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
 </form>
+            </div>
