--- a/src/MyApp/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/MyApp/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,48 +1,65 @@
 {% trans_default_domain 'FOSUserBundle' %}
+<link href="{{asset('css/inscrit.css')}}" rel="stylesheet">
+            <div class="box">
 
 <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
-   {{ form_errors(form.email) }}
-        {{ form_errors(form.plainPassword) }}
-        {{form_label(form.email)}}
+     
+        {{ form_errors(form.email) }}
+        {{ form_label(form.email)}}
         {{ form_widget(form.email)}}
-         
-          <br />
+        </br>
+        
+        
+        {{ form_errors(form.username) }}
         {{form_label(form.username)}}
         {{ form_widget(form.username) }}
-        <br />
-        {{form_label(form.plainPassword)}}
+         </br>
+        {{ form_errors(form.plainPassword.first) }}
+        {{form_label(form.plainPassword.first)}}
         {{ form_widget(form.plainPassword.first) }}
+         </br>
+        {{ form_errors(form.plainPassword.second) }}
+        {{form_label(form.plainPassword.second)}}
         {{ form_widget(form.plainPassword.second) }}
-          <br />
+       </br>
         {{form_label(form.prenom)}}
         {{ form_widget(form.prenom) }}
-          <br />
+        </br>
         {{form_label(form.nom)}}
         {{ form_widget(form.nom) }}
-          <br />
+          </br>
         {{form_label(form.adresse)}}
         {{ form_widget(form.adresse) }}
-          <br />
+           </br>
         {{form_label(form.datedenaissance)}}
         {{ form_widget(form.datedenaissance) }}
-         
-        <br />
+          </br>
         {{form_label(form.telephone)}}
         {{ form_widget(form.telephone) }}
-        <br />
-        {{form_label(form.sexe)}}
-        {{ form_widget(form.sexe) }}
-         <br />
+        </br>
+        
         {{ form_widget(form.societe, { 'attr' : { 'style':'display:none'} }) }}
         {{ form_widget(form.descriptif, { 'attr' : { 'style':'display:none'} }) }}
-        <br />
+
                {{ form_rest(form) }} 
+               </br>
+       
        {# form_widget(form)#}
 
 
-        
+      
 
     <div>
         <input type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
 </form>
+    <ul class="record_actions">
+           
+   <a id="pres" href="{{ path('fos_user_registration_registerPres') }}">Vous etes prestataire inscrivez vous ici
+                   
+    </a>
+           
+        </ul>
+            </div>
+  
+  
